--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">News <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Product Releases</a></li>
+                        <li><a href="#">Press Releases</a></li>
                         <li><a href="#">Strange News</a></li>
                     </ul>
                 </li> 
@@ -130,7 +130,7 @@
     <div class="container">
             <div class="col-lg-12 topspacer"> </div>
             <div class="col-lg-12 maincontainer">
-                <div class="col-md-10">    
+                <div class="col-md-10 maincontainer">    
                     <div class="jumbotron" ng-controller="CarouselDemoCtrl">
                         <carousel interval="myInterval">
                           <slide ng-repeat="slide in slides" active="slide.active">
@@ -196,39 +196,82 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-md-2 sidenav">
-                    <ol>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    <li>Stuff Goes Here</li>
-                    </ol>
+                <div class="col-md-2 sidenav maincontainer"> 
+                    <div class="sidenav_box" >
+                        <img src="/img/sidenav_boxtop.png">
+                        <div class="sidenav_box_container">
+                            <select class="form-control">
+                              <option>Popular Articles</option>
+                              <option>Recent Articles</option>
+                              <option>Newest Articles</option> 
+                            </select>   
+                            <a href="#">                   
+                                <dl class="article_buttons">
+                                  <dt>Article Name</dt>
+                                  <dd>By Author</dd>
+                                </dl>    
+                            </a>   
+                            <a href="#">
+                                <dl class="article_buttons">
+                                  <dt>Article Name</dt>
+                                  <dd>By Author</dd>
+                                </dl>    
+                            </a>   
+                            <a href="#">
+                                <dl class="article_buttons">
+                                  <dt>Article Name</dt>
+                                  <dd>By Author</dd>
+                                </dl>    
+                            </a>   
+                            <a href="#">
+                                <dl class="article_buttons">
+                                  <dt>Article Name</dt>
+                                  <dd>By Author</dd>
+                                </dl>    
+                            </a>   
+                            <a href="#">
+                                <dl class="article_buttons">
+                                  <dt>Article Name</dt>
+                                  <dd>By Author</dd>
+                                </dl>    
+                            </a>   
+                        </div>
+                        <img src="/img/sidenav_boxbottom.png">
+
+                    </div>
+                    <div class="sidenav_box" >
+                        <img src="/img/sidenav_boxtop.png">
+                        <div class="sidenav_box_container">
+                            <select class="form-control">
+                              <option>Popular Tags</option>
+                              <option>Recent Tags</option>
+                              <option>Newest Tags</option> 
+                            </select>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                            <a href ="#">Tag Name</a>
+                        </div>
+                        <img src="/img/sidenav_boxbottom.png">
+                    </div>
                 </div>
             </div>
         </div>            
