--- a/public/index.html
+++ b/public/index.html
@@ -156,42 +156,42 @@
                             <h4>Some title goes here</h4>
                             <small>By Some Author  Jan 1st, 2014</small>
                             <div class="preview_section_wrapper"><h2 class="preview_section">Scenerio</h2></div>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p class="articleteaser" >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
                             <small>By Some Author  Jan 1st, 2014</small>
                             <div class="preview_section_wrapper"><h2 class="preview_section">Fiction</h2></div>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p class="articleteaser" >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
                             <small>By Some Author  Jan 1st, 2014</small>
                             <div class="preview_section_wrapper"><h2 class="preview_section">Literature</h2></div>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p class="articleteaser" >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
                             <small>By Some Author  Jan 1st, 2014</small>
                             <div class="preview_section_wrapper"><h2 class="preview_section">Filks</h2></div>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p class="articleteaser" >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
                             <small>By Some Author  Jan 1st, 2014</small>
                             <div class="preview_section_wrapper"><h2 class="preview_section">Origins</h2></div>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p class="articleteaser" >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                         <div class="col-md-4">
                             <h4>Some title goes here</h4>
                             <small>By Some Author  Jan 1st, 2014</small>
                             <div class="preview_section_wrapper"><h2 class="preview_section">Gaming</h2></div>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p class="articleteaser" >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
                             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                         </div>
                     </div> 
