--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@
                     <ul class="dropdown-menu">
                       <li><a href="#">Fiction</a></li>
                       <li><a href="#">Non Fiction</a></li> 
+                      <li><a href="#">Comedy</a></li> 
                     </ul>
                 </li> 
                 <li class="dropdown">
@@ -101,10 +102,13 @@
                     </ul>
                 </li>  
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Comedy <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Art <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li><a href="#">Filks</a></li>
-                      <li><a href="#">Stories</a></li> 
+                      <li><a href="#">Videos</a></li> 
+                      <li><a href="#">Sketches</a></li> 
+                      <li><a href="#">Painting</a></li> 
+                      <li><a href="#">3d Renders</a></li> 
                     </ul>
                 </li> 
                 <li class="dropdown">
